--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "readme:dpu": "node readme.js"
+    "readme:dpu": "node readme.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "dynamic-package-update": "^1.0.0",
     "google-translate-api": "^2.3.0",
     "libsodium-wrappers": "^0.7.13"
+  },
+  "devDependencies": {
+    "husky": "^8.0.0"
   }
 }
