--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,33 +1,49 @@
-name: "Close stale issues and PRs"
+# name: "Close stale issues and PRs"
+# on:
+#   schedule:
+#     - cron: "1 * * * *"
+
+# jobs:
+#   stale:
+#     permissions:
+#       contents: read
+#       issues: write
+#       pull-requests: write
+#     runs-on: ubuntu-latest
+#     env:
+#       DAYS_BEFORE_ISSUE_STALE: 60
+#       DAYS_BEFORE_PR_STALE: 60
+#       DAYS_BEFORE_ISSUE_CLOSE: 7
+#       DAYS_BEFORE_PR_CLOSE: 7
+#       STALE_ISSUE_LABEL: no-issue-activity
+#       STALE_PR_LABEL: no-issue-activity
+#     steps:
+#       - uses: actions/stale@v8
+#         with:
+#           repo-token: ${{ secrets.GITHUB_TOKEN }}
+#           stale-issue-message: This issue  has been open for  ${{ env.DAYS_BEFORE_ISSUE_STALE}} days with no activity. Add a comment or remove the Stale label to keep open, otherwise it will be close automatically in ${{ env.DAYS_BEFORE_ISSUE_CLOSE}} days.
+#           stale-pr-message: This PR has been open for  ${{ env.DAYS_BEFORE_PR_STALE}} days with no activity. Add a comment or remove the Stale label to keep open, otherwise it will be close automatically in ${{ env.DAYS_BEFORE_PR_CLOSE}} days.
+#           close-issue-message: This issue was closed because it has been stalled for ${{ env.DAYS_BEFORE_ISSUE_CLOSE}} days with no activity.
+#           close-pr-message: This PR was closed because it has been stalled for ${{ env.DAYS_BEFORE_PR_CLOSE}} days with no activity.
+#           stale-issue-label: ${{ env.STALE_ISSUE_LABEL}}
+#           stale-pr-label: ${{ env.STALE_PR_LABEL}}
+#           days-before-issue-stale: ${{ env.DAYS_BEFORE_ISSUE_STALE}}
+#           days-before-pr-stale: ${{ env.DAYS_BEFORE_PR_STALE}}
+#           days-before-issue-close: ${{ env.DAYS_BEFORE_ISSUE_CLOSE}}
+#           days-before-pr-close: ${{ env.DAYS_BEFORE_PR_CLOSE}}
+
+
+name: 'Close stale issues and PRs'
 on:
   schedule:
-    - cron: "1 * * * *"
+    - cron: '2 * * * *'
 
 jobs:
   stale:
-    permissions:
-      contents: read
-      issues: write
-      pull-requests: write
     runs-on: ubuntu-latest
-    env:
-      DAYS_BEFORE_ISSUE_STALE: 60
-      DAYS_BEFORE_PR_STALE: 60
-      DAYS_BEFORE_ISSUE_CLOSE: 7
-      DAYS_BEFORE_PR_CLOSE: 7
-      STALE_ISSUE_LABEL: no-issue-activity
-      STALE_PR_LABEL: no-issue-activity
     steps:
       - uses: actions/stale@v8
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: This issue  has been open for  ${{ env.DAYS_BEFORE_ISSUE_STALE}} days with no activity. Add a comment or remove the Stale label to keep open, otherwise it will be close automatically in ${{ env.DAYS_BEFORE_ISSUE_CLOSE}} days.
-          stale-pr-message: This PR has been open for  ${{ env.DAYS_BEFORE_PR_STALE}} days with no activity. Add a comment or remove the Stale label to keep open, otherwise it will be close automatically in ${{ env.DAYS_BEFORE_PR_CLOSE}} days.
-          close-issue-message: This issue was closed because it has been stalled for ${{ env.DAYS_BEFORE_ISSUE_CLOSE}} days with no activity.
-          close-pr-message: This PR was closed because it has been stalled for ${{ env.DAYS_BEFORE_PR_CLOSE}} days with no activity.
-          stale-issue-label: ${{ env.STALE_ISSUE_LABEL}}
-          stale-pr-label: ${{ env.STALE_PR_LABEL}}
-          days-before-issue-stale: ${{ env.DAYS_BEFORE_ISSUE_STALE}}
-          days-before-pr-stale: ${{ env.DAYS_BEFORE_PR_STALE}}
-          days-before-issue-close: ${{ env.DAYS_BEFORE_ISSUE_CLOSE}}
-          days-before-pr-close: ${{ env.DAYS_BEFORE_PR_CLOSE}}
+          stale-issue-message: 'Message to comment on stale issues. If none provided, will not mark issues stale'
+          stale-pr-message: 'Message to comment on stale PRs. If none provided, will not mark PRs stale'
