--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -32,18 +32,21 @@
 #           days-before-issue-close: ${{ env.DAYS_BEFORE_ISSUE_CLOSE}}
 #           days-before-pr-close: ${{ env.DAYS_BEFORE_PR_CLOSE}}
 
-
-name: 'Close stale issues and PRs'
+name: "Close stale issues and PRs"
 on:
   schedule:
-    - cron: '2 * * * *'
+    - cron: "2 * * * *"
 
 jobs:
   stale:
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/stale@v8
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: 'Message to comment on stale issues. If none provided, will not mark issues stale'
-          stale-pr-message: 'Message to comment on stale PRs. If none provided, will not mark PRs stale'
+          stale-issue-message: "Message to comment on stale issues. If none provided, will not mark issues stale"
+          stale-pr-message: "Message to comment on stale PRs. If none provided, will not mark PRs stale"
